Styling changes - change app titles to ublockstack extension - fix applet size for longer titles

--- a/src/auth/index.html
+++ b/src/auth/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Blockstack Extension - Sign In Request</title>
+    <title>uBlockstack Extension - Sign In Request</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
